--- a/Supervised-ML/LinearRegression/linear_regression.ipynb
+++ b/Supervised-ML/LinearRegression/linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "576e82b9-5bc0-4523-9898-4e0e495eb8ed",
    "metadata": {},
    "outputs": [],
@@ -944,8 +944,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "40b866c8-f0a5-4f5a-8109-3f910961f5cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#One Hot Encoding-->each category becomes a separate column\n",
+    "X=insurance_data.drop(columns=[\"charges\"])\n",
+    "y=insurance_data[\"charges\"]\n",
+    "\n",
+    "X=pd.get_dummies(X,columns=[\"region\"],drop_first=False,dtype=int)\n",
+    "\n",
+    "X[\"sex\"]=X[\"sex\"].map({\"female\":1,\"male\":0})\n",
+    "X[\"smoker\"]=X[\"smoker\"].map({\"yes\":1,\"no\":0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "86f7f3d3-7416-422e-8399-b8c02e652be5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>children</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>region_northeast</th>\n",
+       "      <th>region_northwest</th>\n",
+       "      <th>region_southeast</th>\n",
+       "      <th>region_southwest</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27.900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.770</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22.705</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28.880</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  sex     bmi  children  smoker  region_northeast  region_northwest  \\\n",
+       "0   19    1  27.900         0       1                 0                 0   \n",
+       "1   18    0  33.770         1       0                 0                 0   \n",
+       "2   28    0  33.000         3       0                 0                 0   \n",
+       "3   33    0  22.705         0       0                 0                 1   \n",
+       "4   32    0  28.880         0       0                 0                 1   \n",
+       "\n",
+       "   region_southeast  region_southwest  \n",
+       "0                 0                 1  \n",
+       "1                 1                 0  \n",
+       "2                 1                 0  \n",
+       "3                 0                 0  \n",
+       "4                 0                 0  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "18e464bd-f507-43c6-9dfd-a12285a27c99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r-squared: 0.7835929767120722\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,random_state=42) #random state controls how data is randomly split into training and testing\n",
+    "\n",
+    "model=LinearRegression()\n",
+    "model.fit(X_train,y_train)\n",
+    "y_pred=model.predict(X_test)\n",
+    "\n",
+    "\n",
+    "r2=r2_score(y_test,y_pred)\n",
+    "print(\"r-squared:\",r2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74985320-5d01-42f2-8b42-c3032fa20005",
    "metadata": {},
    "outputs": [],
    "source": []
