Analysing overfitting and underfitting

--- a/Supervised-ML/LinearRegression/linear_regression.ipynb
+++ b/Supervised-ML/LinearRegression/linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "576e82b9-5bc0-4523-9898-4e0e495eb8ed",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "3a873458-a5ba-47eb-ba8d-5c8867f2087e",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "a0221155-c25b-4ad2-a9c8-db286bda5c87",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
        "[1338 rows x 7 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "74985320-5d01-42f2-8b42-c3032fa20005",
    "metadata": {},
    "outputs": [],
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "574b0532-f9d3-4e84-af25-b29175ae84b4",
    "metadata": {},
    "outputs": [
@@ -1268,7 +1268,7 @@
        "4                 0                 0           0         0.0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "50396b24-b9a5-4d76-b709-75906c4be7e6",
    "metadata": {},
    "outputs": [
@@ -1309,8 +1309,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "303812f2-15d7-4237-a412-a0ebad132523",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r-squared for training data: 0.8340713711218875\n"
+     ]
+    }
+   ],
+   "source": [
+    "#underfit and overfit\n",
+    "#r2 training is low and r2 resting is low-->underfit\n",
+    "#r2 training >> r2 testing is low-->overfit\n",
+    "\n",
+    "y_train_pred=model.predict(X_train)\n",
+    "r2_train=r2_score(y_train,y_train_pred)\n",
+    "print(\"r-squared for training data:\",r2_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bb9e82e-4052-4df4-8e7e-47f7c4686399",
    "metadata": {},
    "outputs": [],
    "source": []
